# books-scraper

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
books_scraper/: items.py  middlewares.py  pipelines.py  settings.py
books_scraper/spiders/: __init__.py  bookspider.py
bookscraper/: pipelines.py
bookscraper/spiders/: __init__.py  bookspider.py
